--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,13 @@
     <version>1.0</version>
     <modules>
         <module>Lesson1/Ciphers/Exercise</module>
+        <module>Lesson1/Ciphers/Solution</module>
         <module>Lesson1/Polymorphism/Exercise</module>
+        <module>Lesson1/Polymorphism/Solution</module>
+        <module>Lesson2Preparation/CamelCase/Exercise</module>
+        <module>Lesson2Preparation/CamelCase/Solution</module>
+        <module>Lesson2Preparation/DanishIslands/Exercise</module>
+        <module>Lesson2Preparation/DanishIslands/Solution</module>
+        <module>Lesson2/SearchAndReplace/Exercise</module>
     </modules>
 </project>
